# hopper2d

./: CMakeLists.txt  CMakeLists.txt.orig  CMakeLists_BASE_59786.txt  CMakeLists_REMOTE_59786.txt  README.md  main.cpp
machinelearning/: CMakeLists.txt  __init__.py  evaluate3d.py  evaluateOpti.py  evaluateOptiLoco.py  exportTrainedModel.py  hopper2dOptiWrapper.cpp  hopper2dWrapper.cpp  loco2dOptiWrapper.cpp  testOptiLoco.py  train.py  train3d_Desktop.py  trainOpit.py  trainOpitLoco.py
machinelearning/env/: __init__.py  hopper2dEnv.py  hopper2dOptiEnv.py  loco2dOptiEnv.py  loco3dEnv.py
machinelearning/logs/hopper2dJun15/PPO_1/: events.out.tfevents.1686862800.simon.110902.0
machinelearning/logs/hopper2dJun15/PPO_2/: events.out.tfevents.1686862954.simon.111109.0
machinelearning/logs/hopper2dJun15/PPO_3/: events.out.tfevents.1686864893.simon.112487.0
machinelearning/logs/hopper2dJun15/PPO_4/: events.out.tfevents.1686865026.simon.112626.0
machinelearning/logs/hopper2dJun15/PPO_5/: events.out.tfevents.1686865568.simon.113208.0
machinelearning/logs/hopper2dJun15/PPO_6/: events.out.tfevents.1686869972.simon.115714.0
machinelearning/logs/hopper2dJun16/PPO_1/: events.out.tfevents.1686930103.simon.139088.0
machinelearning/logs/hopper2dJun17/PPO_1/: events.out.tfevents.1687042818.simonLaptop.12254.0
machinelearning/logs/hopper2dJun17/PPO_2/: events.out.tfevents.1687043081.simonLaptop.12383.0
machinelearning/logs/hopper2dJun17/PPO_3/: events.out.tfevents.1687043463.simonLaptop.12759.0
machinelearning/logs/hopper2dJun17/PPO_4/: events.out.tfevents.1687045507.simonLaptop.13482.0
machinelearning/logs/jumpJun18/PPO_1/: events.out.tfevents.1687059006.simonLaptop.16852.0
machinelearning/logs/jumpJun18/PPO_2/: events.out.tfevents.1687062183.simonLaptop.18296.0
machinelearning/logs/jumpJun18/PPO_3/: events.out.tfevents.1687065980.simonLaptop.19318.0
machinelearning/logs/jumpJun18/PPO_4/: events.out.tfevents.1687068699.simonLaptop.20731.0
machinelearning/logs/jumpJun18/PPO_5/: events.out.tfevents.1687104716.simonLaptop.50465.0
machinelearning/logs/jumpJun18/PPO_6/: events.out.tfevents.1687115603.simonLaptop.52996.0
machinelearning/logs/jumpJun18/PPO_7/: events.out.tfevents.1687145025.simonLaptop.59795.0
machinelearning/logs/jumpJun18/PPO_8/: events.out.tfevents.1687148995.simonLaptop.61773.0
machinelearning/logs/jumpJun18/PPO_9/: events.out.tfevents.1687155181.simonLaptop.66030.0
machinelearning/logs/jumpJun20/PPO_1/: events.out.tfevents.1687271154.simon.246046.0
machinelearning/logs/jumpJun21/PPO_1/: events.out.tfevents.1687326101.simonLaptop.11072.0
machinelearning/logs/jumpJun21/PPO_10/: events.out.tfevents.1687386898.simon.294272.0
machinelearning/logs/jumpJun21/PPO_11/: events.out.tfevents.1687389843.simonLaptop.3012.0
machinelearning/logs/jumpJun22/: evaluations.npz
machinelearning/logs/jumpJun23/: evaluations.npz
machinelearning/logs/optijumpAug1/: evaluations.npz
machinelearning/logs/optijumpAug2/: evaluations.npz
machinelearning/logs/optijumpAug4/: evaluations.npz
machinelearning/logs/optijumpAug6/: evaluations.npz
machinelearning/logs/optijumpJuly02/: evaluations.npz
machinelearning/logs/optijumpJuly03/: evaluations.npz
machinelearning/logs/optijumpJuly05/: evaluations.npz
machinelearning/logs/optijumpJuly06/: evaluations.npz
machinelearning/logs/optijumpJuly07/: evaluations.npz
machinelearning/logs/optijumpJuly07sac/: evaluations.npz
machinelearning/logs/optijumpJuly08/: evaluations.npz
machinelearning/logs/optijumpJuly11/: evaluations.npz
machinelearning/logs/optijumpJuly13/: evaluations.npz
machinelearning/logs/optijumpJuly14/: evaluations.npz
machinelearning/logs/optijumpJuly17/: evaluations.npz
machinelearning/logs/optijumpJuly18/: evaluations.npz
machinelearning/logs/optijumpJun28/: evaluations.npz
machinelearning/logs/optijumpJun29/: evaluations.npz
src/: CMakeLists.txt  Hopper2dConfig.h.in  main.cpp
src/render/: CMakeLists.txt  animate.cpp  animate.h  animate.hpp
src/simulation/: CMakeLists.txt  dynamics.cpp  dynamics.h  dynamics.hpp  hopper_simulate.cpp  hopper_simulate.h  hopper_simulate.hpp
src/utils/: CMakeLists.txt  dmToEigen.cpp  dmToEigen.h  dmToEigen.hpp
(+287 files in other folders)
